syntax = "proto3";

package TransactionService;

service TransactionService {
  rpc HandleTransaction (TransactionRequest) returns (TransactionResponse);
}

message TransactionRequest {
  int32 transactionHistoryId = 1;
  double total = 2;
}

message TransactionResponse {
  string message = 1;
}
